src/objects/Underwriting_QA__c.object
<CustomObject>
    <description>Quality Checking object for underwriting cases</description>
    <fields>
        <fullName>Additional_searches_needed_requested__c</fullName>
        <inlineHelpText>Additional searches needed/requested</inlineHelpText>
        <label>Additional searches needed/requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advice_given_Policy_divulged__c</fullName>
        <inlineHelpText>During the call has the U/W given any advice to the customer? (ex: consolidation loans, save interest by settling your loan early, etc.) Did they divulge confidential policy guidelines?</inlineHelpText>
        <label>Advice given? Policy divulged?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advice_was_given_Policy_was_Divulged__c</fullName>
        <label>Advice was given ? Policy was Divulged ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApprovalCaseScore__c</fullName>
        <description>This is a calculation for the overall QC score</description>
        <formula>IF(ISPICKVAL(Bank_Statement_Checked__c, &quot;No&quot;),0,8)+ 
IF(ISPICKVAL(ID_checked_run_via_Au10tix__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Employer_business_found__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Final_affordability_calculator_updated__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(POI_Correct_documents_checked__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Full_compliance_with_all_Current_Policy__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Tamper_Check_performed__c, &quot;No&quot;),0,8)+ 
IF(ISPICKVAL(Valid_Lending_Decision__c, &quot;No&quot;),0,8)+ 
IF(ISPICKVAL(Upheld_Complaint__c, &quot;No&quot;),0,8)+ 
IF(ISPICKVAL(Correct_and_accurate_notes_given__c, &quot;No&quot;),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApprovalCaseScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovalPercent__c</fullName>
        <description>This is the final percentage score for the QC approval case</description>
        <formula>ApprovalCaseScore__c / 38</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApprovalPercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bank_Statement_Checked__c</fullName>
        <inlineHelpText>Bank Statement: Sort code, Account number checked, correct process followed if new statement required.</inlineHelpText>
        <label>Bank Statement: Checked</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Block_account_request_emailed__c</fullName>
        <inlineHelpText>Block account request emailed to Borrowers?</inlineHelpText>
        <label>Block account request emailed ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_ended_correctly_if_ID_checks_failed__c</fullName>
        <inlineHelpText>Call closed if ID checks fails and Customer advised on further action/other options?</inlineHelpText>
        <label>Call ended correctly if ID checks failed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CancellationCasePercent__c</fullName>
        <description>Calculates UW cancellation case score</description>
        <formula>CancellationCaseScore__c  / 11</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CancellationCasePercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CancellationCaseScore__c</fullName>
        <description>Calculates the cancellation score for the UW QA case</description>
        <formula>IF(ISPICKVAL(Full_compliance_with_all_Current_Policy__c, &quot;No&quot;),0,2)+ 
IF(ISPICKVAL(Documents_Correct_Rationale__c  , &quot;No&quot;),0,2)+ 
IF(ISPICKVAL(Documents_checked_within_24_hours__c , &quot;No&quot;),0,2)+ 
IF(ISPICKVAL(Customer_given_the_correct_information__c , &quot;No&quot;),0,2)+ 
IF(ISPICKVAL(Valid_Cancellation_timescale__c, &quot;No&quot;),0,2)+ 
IF(ISPICKVAL(Valid_Cancellation_Reason__c , &quot;No&quot;),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CancellationCaseScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Underwriting Quality Checks</relationshipLabel>
        <relationshipName>Underwriting_Quality_Checks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_log_updated_with_notes_from_call__c</fullName>
        <inlineHelpText>Case log updated with notes from call.</inlineHelpText>
        <label>Case log updated with notes from call.</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_type_of_fraud_noted__c</fullName>
        <inlineHelpText>Category/type of fraud noted?</inlineHelpText>
        <label>Category/type of fraud noted?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_to_confirm_our_Applicant__c</fullName>
        <inlineHelpText>Check to confirm our Applicant?</inlineHelpText>
        <label>Check to confirm our Applicant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CifasCaseScore__c</fullName>
        <formula>IF(ISPICKVAL(Check_to_confirm_our_Applicant__c, &quot;No&quot;),0,12)+ 
IF(ISPICKVAL(Category_type_of_fraud_noted__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( Was_loading_investigated_correctly__c, &quot;No&quot;),0,12)+ 
IF(ISPICKVAL(Has_call_been_attempted_made__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(If_proceeding_with_0_1and_2_category_ca__c, &quot;No&quot;),0,12)+ 
IF(ISPICKVAL(Full_notes_explaining_why_U_W_had_good_r__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Was_reloading_for_a_valid_reason__c , &quot;No&quot;),0,12)+ 
IF(ISPICKVAL(Was_loading_reloading_correctly_input__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Note_added_to_the_task_stating_that_sear__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Sent_letter_to_Victim_Or_case_note__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Sent_letter_to_Victim_Or_case_note_expl__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Block_account_request_emailed__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Correct_Decline_Reasons_Chosen__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Cifas_loading_number_recorded__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(Overall_Cifas_was_Compliant__c, &quot;No&quot;),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CifasCaseScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CifasCheckPercent__c</fullName>
        <description>Total percentage for the CIFAS case check</description>
        <formula>CifasCaseScore__c /59</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CifasCheckPercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cifas_Loading__c</fullName>
        <inlineHelpText>Cifas loading on the case ?</inlineHelpText>
        <label>Cifas Loading ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cifas_loading_number_recorded__c</fullName>
        <inlineHelpText>Cifas loading number recorded in the task?</inlineHelpText>
        <label>Cifas loading number recorded ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Development Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed_applicant_details__c</fullName>
        <inlineHelpText>Has the U/W confirmed applicants Full name, DOB, and Full Address?</inlineHelpText>
        <label>Confirmed applicant details?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Decline_Reasons_Chosen__c</fullName>
        <inlineHelpText>Correct Decline Reasons Chosen?</inlineHelpText>
        <label>Correct Decline Reasons Chosen?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_and_accurate_notes_given__c</fullName>
        <inlineHelpText>Correct and accurate notes given to support lending decision?</inlineHelpText>
        <label>Correct and accurate notes given</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_docs_asked_for_instructions_give__c</fullName>
        <inlineHelpText>Correct documents requested - Correct upload instructions given (E-mail address only given as a last resort)</inlineHelpText>
        <label>Correct docs asked for/instructions give</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_file_question__c</fullName>
        <inlineHelpText>One question from the credit file - Was the protocol of not revealing partners/assoc details complied with?</inlineHelpText>
        <label>Credit file question</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_given_the_correct_information__c</fullName>
        <inlineHelpText>Customer given the correct information during ownership e.g. (15% income worked from gross salary.)</inlineHelpText>
        <label>Customer given the correct information ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeclineCaseCore__c</fullName>
        <description>calculates the decline score for the QA case</description>
        <formula>IF(ISPICKVAL( Full_compliance_with_Current_Policy__c, &quot;No&quot;),0,2)+ 
IF(ISPICKVAL(Documents_checked_outside_of_case_prep__c , &quot;No&quot;),0,2)+ 
IF(ISPICKVAL(Final_affordability_calculator_updated__c, &quot;No&quot;),0,2)+ 
IF(ISPICKVAL(Valid_Decline_Rationale__c , &quot;No&quot;),0,2)+ 
IF(ISPICKVAL( Correct_Decline_Reasons_Chosen__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( Cifas_Loading__c , &quot;No&quot;),0,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeclineCaseCore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeclineCasePercent__c</fullName>
        <description>Calculates the percentage score for the UW Decline case</description>
        <formula>DeclineCaseCore__c  / 11</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeclineCasePercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Documents_Correct_Rationale__c</fullName>
        <inlineHelpText>Documents: - Correct rational for additional documents requested - Task raised - Valid format ?</inlineHelpText>
        <label>Documents: - Correct Rationale ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documents_checked_outside_of_case_prep__c</fullName>
        <inlineHelpText>Documents Checked (Outside of Caseprep)</inlineHelpText>
        <label>Documents checked outside of case prep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documents_checked_within_24_hours__c</fullName>
        <inlineHelpText>Documents checked within 24 hours of receipt/reasonable timescale. No unnecessary delays?</inlineHelpText>
        <label>Documents checked within 24 hours</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_business_found__c</fullName>
        <inlineHelpText>Employer/business found on internet and URL pasted into case notes? Or Verify employment by either call to employer on verified number or obtained docs as per policy.</inlineHelpText>
        <label>Employer/business found</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_affordability_calculator_updated__c</fullName>
        <inlineHelpText>Final affordability calculator updated to include any additional credit(s), confirmed income and correct rental/mortgage as per policy. Notes added to support the amendments.</inlineHelpText>
        <label>Final affordability calculator updated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_compliance_with_Current_Policy__c</fullName>
        <inlineHelpText>Full compliance with all Current Policy P&amp;G &amp; Interim emails. All appropriate actions taken and no unnecessary delays or document requests?</inlineHelpText>
        <label>Full compliance with Current Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_compliance_with_all_Current_Policy__c</fullName>
        <inlineHelpText>Full compliance with all Current Policy P&amp;G &amp; Interim emails. All appropriate actions taken and no unnecessary delays or document requests? Tamper check conducted where required ?</inlineHelpText>
        <label>Full compliance with all Current Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_notes_explaining_why_U_W_had_good_r__c</fullName>
        <inlineHelpText>Full notes explaining why U/W had good reason to suspect fraud?</inlineHelpText>
        <label>Full Explanation given ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Greeting_convenient_to_continue__c</fullName>
        <inlineHelpText>Greeting, Company Name, U/W Name. Was it evident that it was convenient to continue or should the U/W have ideally checked this?</inlineHelpText>
        <label>Greeting &amp; convenient to continue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_call_been_attempted_made__c</fullName>
        <inlineHelpText>Has call been attempted/made?</inlineHelpText>
        <label>Has call been attempted/made?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_checked_run_via_Au10tix__c</fullName>
        <label>ID checked, run via Au10tix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_proceeding_with_0_1and_2_category_ca__c</fullName>
        <inlineHelpText>If proceeding with 0, 1and 2 category cases and no bank match was interbank check made (even if bank statement received before or after)</inlineHelpText>
        <label>If proceeding with 0, 1 &amp; 2 category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Information_factually_correct__c</fullName>
        <inlineHelpText>Was information given to the customer factually correct?</inlineHelpText>
        <label>Information factually correct?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note_added_to_the_task_stating_that_sear__c</fullName>
        <inlineHelpText>Note added to the task stating that searches are to remain until contact made with Victim or removed if contact has been made with Victim.</inlineHelpText>
        <label>Note added to the task RE: Searches</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Cifas_was_Compliant__c</fullName>
        <inlineHelpText>Overall CIFAS was compliant ?</inlineHelpText>
        <label>Overall Cifas was Compliant ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>POI_Correct_documents_checked__c</fullName>
        <inlineHelpText>POI: Correct documents checked, 15% rule checked</inlineHelpText>
        <label>POI: Correct documents checked</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_and_courteous__c</fullName>
        <inlineHelpText>U/W professional and courteous, and not speaking over or interrupting applicant</inlineHelpText>
        <label>Professional and courteous?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RC_Codes_Complied_with__c</fullName>
        <inlineHelpText>RC Codes Complied with</inlineHelpText>
        <label>RC Codes Complied with</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_call__c</fullName>
        <inlineHelpText>Reason for call</inlineHelpText>
        <label>Reason for call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_silences_hold_checking_ok__c</fullName>
        <inlineHelpText>Reason for silences/hold and checking ok with applicant</inlineHelpText>
        <label>Reason for silences/hold &amp; checking ok</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RiskScore__c</fullName>
        <description>Tool for calculating risk score for Underwriting</description>
        <formula>IF(    RecordType.DeveloperName    = &apos;Approval_check&apos;,  ApprovalPercent__c, 
 IF( RecordType.DeveloperName  = 	&apos;Decline_Check&apos;,   DeclineCasePercent__c, 
IF( RecordType.DeveloperName  = 	&apos;Cifas_check&apos;,    CifasCheckPercent__c, 
IF( RecordType.DeveloperName  = 	&apos;Cancellation_check&apos;,     CancellationCasePercent__c, 
IF( RecordType.DeveloperName  = 	&apos;Telephone_call_check&apos;,      UW_Call_Case_Percent__c, 0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RiskScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sent_letter_to_Victim_Or_case_note__c</fullName>
        <inlineHelpText>Sent letter to Victim? Or case note explaining why letter not sent e.g fear of interception?</inlineHelpText>
        <label>Sent letter to Victim? Or case note ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sent_letter_to_Victim_Or_case_note_expl__c</fullName>
        <inlineHelpText>Copy of letter stored in appropriate folder?</inlineHelpText>
        <label>Copy of letter stored ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tamper_Check_performed__c</fullName>
        <inlineHelpText>Tamper Check performed and accurately assessed, where required</inlineHelpText>
        <label>Tamper Check performed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UW_Call_Case_Percent__c</fullName>
        <formula>UW_Call_Case_Score__c /41</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UW Call Case Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UW_Call_Case_Score__c</fullName>
        <formula>IF(ISPICKVAL(Greeting_convenient_to_continue__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Confirmed_applicant_details__c , &quot;No&quot;),0,9)+ 
IF(ISPICKVAL(Credit_file_question__c , &quot;No&quot;),0,3)+ 
IF(ISPICKVAL(Reason_for_call__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Call_ended_correctly_if_ID_checks_failed__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(RC_Codes_Complied_with__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Correct_docs_asked_for_instructions_give__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Valid_Loan_purpose_established__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Additional_searches_needed_requested__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Professional_and_courteous__c , &quot;No&quot;),0,4)+
IF(ISPICKVAL(Reason_for_silences_hold_checking_ok__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(Information_factually_correct__c , &quot;No&quot;),0,4)+
IF(ISPICKVAL(Case_log_updated_with_notes_from_call__c , &quot;No&quot;),0,4)+
IF(ISPICKVAL(Advice_was_given_Policy_was_Divulged__c  , &quot;Fail&quot;),0,9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UW Call Case Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Underwriter_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search here for the underwriter you are quality checking</inlineHelpText>
        <label>Underwriter name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Underwriting_Quality_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Upheld_Complaint__c</fullName>
        <inlineHelpText>Upheld Complaint ?</inlineHelpText>
        <label>Upheld Complaint</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_Cancellation_Reason__c</fullName>
        <inlineHelpText>Valid Cancellation Reason?</inlineHelpText>
        <label>Valid Cancellation Reason ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_Cancellation_timescale__c</fullName>
        <inlineHelpText>Valid Cancellation within correct timescales and/or Deadline extension valid ?</inlineHelpText>
        <label>Valid Cancellation timescale ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_Decline_Rationale__c</fullName>
        <inlineHelpText>Valid Decline Rationale?</inlineHelpText>
        <label>Valid Decline Rationale?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_Lending_Decision__c</fullName>
        <inlineHelpText>Is the lending decision valid ?</inlineHelpText>
        <label>Valid Lending Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_Loan_purpose_established__c</fullName>
        <inlineHelpText>Valid Loan purpose established</inlineHelpText>
        <label>Valid Loan purpose established</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_loading_investigated_correctly__c</fullName>
        <inlineHelpText>Was loading correctlyinvestigated according to category type?</inlineHelpText>
        <label>Was loading investigated correctly ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_loading_reloading_correctly_input__c</fullName>
        <inlineHelpText>Was loading/reloading correctly input?</inlineHelpText>
        <label>Was loading/reloading correctly input?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_reloading_for_a_valid_reason__c</fullName>
        <inlineHelpText>Was reloading for a valid reason ?</inlineHelpText>
        <label>Was reloading for a valid reason ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>X10_Comments__c</fullName>
        <label>10.Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X11_Comments__c</fullName>
        <label>11.Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X12_Comments__c</fullName>
        <label>12.Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Underwriting Quality Check</label>
    <listViews>
        <fullName>Approval_checks</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Underwriter_name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Case__c</columns>
        <columns>ApprovalPercent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Underwriting_QA__c.Approval_check</value>
        </filters>
        <label>Approval checks</label>
        <sharedTo>
            <group>QC_Underwriting</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cancellation_Checks</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CancellationCasePercent__c</columns>
        <columns>Underwriter_name__c</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Underwriting_QA__c.Cancellation_check</value>
        </filters>
        <label>Cancellation Checks</label>
        <sharedTo>
            <group>QC_Underwriting</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cifas_Checks</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Underwriter_name__c</columns>
        <columns>CifasCheckPercent__c</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Underwriting_QA__c.Cifas_check</value>
        </filters>
        <label>Cifas Checks</label>
        <sharedTo>
            <group>QC_Underwriting</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Decline_Checks</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Underwriter_name__c</columns>
        <columns>DeclineCasePercent__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Underwriting_QA__c.Decline_Check</value>
        </filters>
        <label>Decline Checks</label>
        <sharedTo>
            <group>QC_Underwriting</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Telephone_Call_Checks</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Underwriter_name__c</columns>
        <columns>UW_Call_Case_Percent__c</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Underwriting_QA__c.Telephone_call_check</value>
        </filters>
        <label>Telephone Call Checks</label>
        <sharedTo>
            <group>QC_Underwriting</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Underwriting QA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Underwriting Quality Checks</pluralLabel>
    <recordTypes>
        <fullName>Approval_check</fullName>
        <active>true</active>
        <description>UW Quality Assurance check on an approved loan</description>
        <label>Approval check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cancellation_check</fullName>
        <active>true</active>
        <description>UW Quality Assurance check on a cancelled loan</description>
        <label>Cancellation check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cifas_check</fullName>
        <active>true</active>
        <description>UW Quality Assurance check on a loan with a CIFAS flag</description>
        <label>Cifas check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Decline_Check</fullName>
        <active>true</active>
        <description>UW Quality Assurance check on a Declined loan</description>
        <label>Decline Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Telephone_call_check</fullName>
        <active>true</active>
        <description>UW Quality Assurance check on a telephone call</description>
        <label>Telephone call check</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Case_Number_Missing</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Case__c)</errorConditionFormula>
        <errorDisplayField>Case__c</errorDisplayField>
        <errorMessage>You must associate a report with a case</errorMessage>
    </validationRules>
</CustomObject>